--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,14 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <div class="header-container">
+                <div class="header-content">
+                    <h1>Brand New Group of Architects</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+                <img src="./images/banner.png" alt="">
+        </div>
     </header>
 </body>
 </html>
